# cyclops

./: .gitignore  README.md  graphify-out  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/coordinator-api/: pyproject.toml
apps/coordinator-api/src/cyclops_coordinator/: app.py  config.py  db.py  health_polling.py  layout_store.py  models.py  registry.py
apps/coordinator-api/src/cyclops_coordinator/routes/: cameras.py  layouts.py  status.py
apps/coordinator-api/tests/: test_cameras_api.py  test_deploy_script.py  test_health_polling.py  test_layouts_api.py
apps/coordinator-web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/coordinator-web/e2e/: mobile-layout.spec.ts
apps/coordinator-web/src/: App.tsx
apps/coordinator-web/src/api/: client.ts
apps/coordinator-web/src/components/: CameraTile.tsx  (+3 more)
apps/edge-camera/: pyproject.toml
apps/edge-camera/src/cyclops_edge/: app.py  camera_provider.py  config.py  frame_overlay.py  frame_store.py  models.py  settings_store.py
apps/edge-camera/src/cyclops_edge/providers/: mock_provider.py  picamera2_provider.py
apps/edge-camera/src/cyclops_edge/routes/: health.py  settings.py  stream.py
apps/edge-camera/src/cyclops_edge/templates/: settings.html
apps/edge-camera/tests/: test_frame_overlay.py  test_health.py  test_settings_api.py  test_settings_page.py  test_stream.py
config/examples/: cameras.example.yaml  coordinator.env.example  edge.env.example
docs/adr/: 0001-phase1-stack.md
docs/operations/: configuration.md  deployment.md
docs/testing/: test-plan.md
ops/deploy/: build-release.sh  deploy-coordinator.sh  deploy-edge.sh  deploy-from-git.sh
ops/systemd/: cyclops-coordinator.service  cyclops-edge.service
(+7 files in other folders)
