[project]
name = "cyclops"
version = "0.1.0"
description = "Cyclops Phase 1 monorepo"
requires-python = ">=3.11,<3.12"
dependencies = [
  "cyclops-edge",
  "cyclops-coordinator",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
cyclops-edge = { workspace = true }
cyclops-coordinator = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/edge-camera",
  "apps/coordinator-api",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "/Users/jadennation/DEV/01_active_projects/cyclops/apps/edge-camera/tests",
  "/Users/jadennation/DEV/01_active_projects/cyclops/apps/coordinator-api/tests",
]
