[project]
name = "cyclops-edge"
version = "0.1.0"
description = "Cyclops edge camera service"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "pillow>=10.4.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "uvicorn[standard]>=0.31.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclops_edge"]
